objects/TIMBASURVEYS__OptionBranchingRule__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__AnswerOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AnswerOption</label>
        <referenceTo>TIMBASURVEYS__AnswerOption__c</referenceTo>
        <relationshipLabel>OptionBranchingRules</relationshipLabel>
        <relationshipName>OptionBranchingRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Answered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__IsPageBranch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPageBranch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>OptionBranchingRules</relationshipLabel>
        <relationshipName>OptionBranchingRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>OptionBranchingRule</label>
    <nameField>
        <label>OptionBranchingRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OptionBranchingRules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>